# Django-Starter-REST-GraphQL-Template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
apps/: asgi.py  settings.py  testing.py  urls.py  wsgi.py
apps/products/: models.py
apps/products/api/graphql/: schema.py
apps/products/api/rest/: serializers.py  viewsets.py
apps/products/migrations/: 0001_initial.py
apps/shared/: models.py  translation.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
commands/: add  create-admin  info  migrate  start  start-prod  test
docs/: best-practices.md
scripts/: get-poetry.py
tests/integration/products/: factories.py  test_api.py  test_graphql.py
tests/integration/products/snapshots/: snap_test_api.py
